Sat Jan 07 19:09:33 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING,docs/tests.html: Merge the "running tests" section of
	  docs/tests.html into the similar section in HACKING, and make
	  docs/tests.html refer the reader to HACKING for more information.
	* HACKING,tests/apitest.cc: Remove OM_TEST_BACKEND.  You can now
	  use the "-b" switch to apitest to control which backend is used
	  so it's pretty much redundant.
	* HACKING,testsuite/testsuite.cc: Rename XAPIAN_SIG_DFL to
	  XAPIAN_TESTSUITE_SIG_DFL.
	* HACKING,testsuite/testsuite.cc: Add XAPIAN_TESTSUITE_PLAIN_OUTPUT
	  to disable use of ANSI escape sequences in test output.

Sat Jan 07 09:13:06 GMT 2006  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Write top-bit set characters using \xXX
	  notation to avoid warnings from Intel's C++ compiler.

Sat Jan 07 07:13:25 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: TYPE_SOCKLEN_T fails hard, so only run it if we've
	  successfully run other socket tests.

Sat Jan 07 05:29:39 GMT 2006  Olly Betts <olly@survex.com>

	* queryparser/accentnormalisingitor.h: #include <limits.h> for
	  CHAR_BIT.

Fri Jan 06 21:24:01 GMT 2006  Olly Betts <olly@survex.com>

	* bin/xapian-compact.cc: Fix printf type mismatch on 64 bit platforms.

Fri Jan 06 18:05:30 GMT 2006  Olly Betts <olly@survex.com>

	* queryparser/queryparser.cc,queryparser/queryparser.lemony,
	  queryparser/queryparser_internal.h: Replace pair<bool, string>
	  with a simple class BoolAndString - the pair results in a
	  4328 byte symbol on HP-UX which gets truncated (to 4000 bytes).

Fri Jan 06 12:55:37 GMT 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated from tinderbox.

Thu Jan 05 16:12:00 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Oops, remove hack left over from testing.

Thu Jan 05 16:09:06 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Add sanity check for MS Windows that "find" is
	  Unix-like find, not MSDOS-like.
