@@ -1,3 +1,8 @@
+Sun Jan 08 02:09:48 GMT 2006  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_lock.cc: Cast NULL to (void*) to avoid
+	  "missing sentinel" warning from GCC4.
+
 Sat Jan 07 19:09:33 GMT 2006  Olly Betts <olly@survex.com>
 
 	* HACKING,docs/tests.html: Merge the "running tests" section of
